--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,39 +1,39 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white">
 
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/LoginLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:layout_marginBottom="106dp"
         android:layout_marginLeft="103dp"
         android:layout_marginStart="103dp"
-        android:layout_marginBottom="106dp"
-        android:id="@+id/LoginLayout">
+        android:orientation="horizontal">
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/sign_in_button"
             android:layout_width="157dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom" />
+            android:layout_gravity="bottom"/>
 
     </LinearLayout>
 
     <Button
+        android:id="@+id/sign_out_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sign_out"
-        android:id="@+id/sign_out_button"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textColor="@color/white"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
         android:background="@color/red"
-        android:layout_marginTop="10dp" />
+        android:text="@string/sign_out"
+        android:textColor="@color/white"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -41,28 +41,28 @@
         android:layout_alignParentTop="true">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <TextView
+                android:id="@+id/user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:id="@+id/user_name"
-                android:text="@string/sign_in"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="5dp" />
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/sign_in"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
             <ImageView
+                android:id="@+id/displayPicture"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:id="@+id/displayPicture"
-                android:src="@drawable/default_profile_img"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
-                android:contentDescription="@string/display_picture_content_description" />
+                android:contentDescription="@string/display_picture_content_description"
+                android:src="@drawable/default_profile_img"/>
         </LinearLayout>
     </FrameLayout>
 
